Add UsernamePrompt to password.
Signed-off-by: leozhang2018 <leozhang2018@gmail.com>

--- a/custom-web/templates/password.html
+++ b/custom-web/templates/password.html
@@ -13,16 +13,16 @@
         <label for="password">密码</label>
         <input required id="password" name="password" type="password" class="form-control" placeholder="请输入密码" {{ if .Invalid }} autofocus {{ end }}/>
       </div>
-      <!-- {{ if .Invalid }}
+      {{ if .Invalid }}
       <p class="text-left">{{ .UsernamePrompt }} 和密码不正确</p>
-      {{ end }} -->
+      {{ end }}
       <button type="submit" class="btn btn-primary btn-md btn-block">登录</button>
   </form>
-  <!-- {{ if .BackLink }} -->
+  {{ if .BackLink }}
   <div class="link-back">
     <a class="dex-subtle-text" href="{{ .BackLink }}">选择其它登录方式</a>
   </div>
-  <!-- {{ end }} -->
+  {{ end }}
 </div>
 
 {{ template "footer.html" . }}
