Set style to error text.
Signed-off-by: leozhang2018 <leozhang2018@gmail.com>

--- a/custom-web/static/main.css
+++ b/custom-web/static/main.css
@@ -117,8 +117,13 @@ a {
 }
 
 .login .login-inner-form .form-group {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   text-align: left;
+}
+
+.login .login-inner-form .error-text {
+  margin-bottom: 5px;
+  color: #f56c6c;
 }
 
 .login .login-inner-form .input-text {
