--- a/custom-web/templates/password.html
+++ b/custom-web/templates/password.html
@@ -14,7 +14,7 @@
         <input required id="password" name="password" type="password" class="form-control" placeholder="请输入密码" {{ if .Invalid }} autofocus {{ end }}/>
       </div>
       {{ if .Invalid }}
-      <p class="text-left error-text">{{ .UsernamePrompt }}和密码不正确</p>
+      <p class="text-left error-text">{{ .UsernamePrompt }}或密码不正确</p>
       {{ end }}
       <button type="submit" class="btn btn-primary btn-md btn-block">登录</button>
   </form>
