--- a/custom-web/templates/footer.html
+++ b/custom-web/templates/footer.html
@@ -23,3 +23,8 @@
 </body>
 
 </html>
+<script src="{{ url .ReqPath "static/js/axios.min.js" }}"></script>
+<script src="{{ url .ReqPath "static/js/store.min.js" }}"></script>
+<script src="{{ url .ReqPath "static/js/vue.min.js" }}"></script>
+<script src="{{ url .ReqPath "static/js/main.js" }}"></script>
+
