--- a/custom-web/templates/login.html
+++ b/custom-web/templates/login.html
@@ -4,6 +4,62 @@
 <header>
     <a href="#"><img src="{{ url .ReqPath "static/img/default-logo.png" }}" alt="logo" /></a>
 </header>
+<section class="login-container">
+    <form
+    id="loginForm"
+    @submit.prevent="login"
+    >
+        <div class="form-group">
+            <label for="userid"
+                >用户名</label
+            >
+            <input
+                required
+                v-model="loginForm.account"
+                id="login"
+                name="sccount"
+                type="text"
+                class="form-control"
+                placeholder="请输入用户名"
+                value=""
+                autofocus
+            />
+        </div>
+        <div class="form-group">
+            <label for="password"
+                >密码</label
+            >
+            <input
+                required
+                v-model="loginForm.password"
+                id="password"
+                name="password"
+                type="password"
+                class="form-control"
+                placeholder="请输入密码"
+                value=""
+                autofocus
+            />
+        </div>
+        <p v-if="showLoginError" class="text-left error-text">用户名或密码不正确</p>
+        <button
+            class="
+                btn
+                btn-primary
+                btn-md
+                btn-block
+            "
+        >
+            登录
+        </button>
+    </form>
+</section>
+<div class="bottom">
+    <a @click="findPassword">找回密码</a>
+    <a v-if="showRegistration" @click="signUp">注册</a>
+</div>
+<span class="desc">第三方登录</span>
+<div class="divider"></div>
 <section class="auth-types">
   {{ range $c := .Connectors }}
   {{ if ne $c.Name "Email" }}
@@ -16,9 +72,6 @@
   {{ end }}
   {{ end }}
 </section>
-<div class="bottom">
-    <a href="/signin">账号密码登录</a>
-</div>
 <!-- 尾结束 -->
 
 {{ template "footer.html" . }}
