--- a/custom-web/templates/header.html
+++ b/custom-web/templates/header.html
@@ -23,16 +23,16 @@
         href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:200,300,400,500,600,700" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:200,300,400,500,600,700"
         media="all" onload="this.media='all'" />
-    <link href="{{ url .ReqPath "static/bootstrap.css" }}" rel="stylesheet">
-    <link href="{{ url .ReqPath "static/main.css" }}" rel="stylesheet">
+    <link href="{{ url .ReqPath "static/css/bootstrap.css" }}" rel="stylesheet">
+    <link href="{{ url .ReqPath "static/css/main.css" }}" rel="stylesheet">
     <link href="{{ url .ReqPath "theme/styles.css" }}" rel="stylesheet">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1282370_mbsho89kty9.css"
     media="all" onload="this.media='all'" />
-    <title>第三方登录</title>
+    <title>登录</title>
 </head>
 
 <body>
-    <div style="height: 100%; display: flex; flex-direction: column">
+    <div id="dex-login" style="height: 100%; display: flex; flex-direction: column">
         <div class="login tab-box" style="height: 100%">
             <div class="container-fluid">
                 <div class="row">
