--- a/custom-web/templates/password.html
+++ b/custom-web/templates/password.html
@@ -11,7 +11,22 @@
       </div>
       <div class="form-group">
         <label for="password">密码</label>
-        <input required id="password" name="password" type="password" class="form-control" placeholder="请输入密码" {{ if .Invalid }} autofocus {{ end }}/>
+        <div class="input--suffix">
+          <input
+              required
+              id="password"
+              name="password"
+              :type="showPassword?'text':'password'"
+              class="form-control"
+              placeholder="请输入密码"
+              {{ if .Invalid }} autofocus {{ end }}
+          />
+          <span class="input__suffix">
+              <span class="input__suffix-inner">
+              <i @click="showPassword = !showPassword" class="iconfont iconview"></i>
+              </span>
+          </span>
+      </div>
       </div>
       {{ if .Invalid }}
       <p class="text-left error-text">{{ .UsernamePrompt }}或密码不正确</p>
