fix:fix login page style.
Signed-off-by: leozhang2018 <leozhang2018@gmail.com>

--- a/custom-web/templates/index.html
+++ b/custom-web/templates/index.html
@@ -57,6 +57,9 @@
                         <div class="col-lg-7 col-md-12 col-pad-0 form-section">
                             <div class="login-inner-form">
                                 <div class="details">
+                                    <header>
+                                        <a href="#"><img src="../static/img/default-logo.png" alt="logo" /></a>
+                                    </header>
                                     <!-- 头结束 -->
                                     <section class="login-container">
                                         <form
