--- a/custom-web/static/css/main.css
+++ b/custom-web/static/css/main.css
@@ -123,6 +123,39 @@ a {
   text-align: left;
 }
 
+.login .login-inner-form .form-group label{
+  text-align: right;
+  vertical-align: middle;
+  float: left;
+  font-size: 14px;
+  line-height: 40px;
+  padding: 0 12px 0 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #717171;
+  margin-bottom: 0;
+}
+
+.login .login-inner-form .form-group .form-control{
+    -webkit-appearance: none;
+    background-color: #FFF;
+    background-image: none;
+    border-radius: 4px;
+    border: 1px solid #DCDFE6;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #606266;
+    display: inline-block;
+    font-size: inherit;
+    height: 40px;
+    line-height: 40px;
+    outline: 0;
+    padding: 0 15px;
+    -webkit-transition: border-color .2s cubic-bezier(.645,.045,.355,1);
+    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
+    width: 100%;
+}
+
 .login .login-inner-form .form-group .input--suffix {
   position: relative;
   font-size: 14px;
@@ -376,7 +409,6 @@ input[type="radio"] {
 
 .details .auth-types{
   text-align: right;
-  margin-top: 15px;
 }
 
 .details .auth-types .methods-desc{
